...
                android:textStyle="bold" />

        </LinearLayout>

        <!--Delete alarm-->
        <LinearLayout
            android:id="@+id/delete_alarm"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_red_dark"
            android:gravity="center"
            android:orientation="vertical">

...
                android:layout_marginBottom="10dp"
                android:text="Delete"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/delete_alarm_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_delete_alarm" />

        </LinearLayout>

...
